[gd_scene load_steps=2 format=3 uid="uid://c8nn0h50vupim"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_38835"]

[node name="main" type="Node"]
script = ExtResource("1_38835")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="CreateSessionButton" type="Button" parent="Control/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "Create Session"

[node name="EndSessionButton" type="Button" parent="Control/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "End Session"

[node name="StartLongPolling" type="Button" parent="Control/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "Start Long Polling"

[node name="EndLongPolling" type="Button" parent="Control/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "End Long Polling"

[node name="Label" type="Label" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="EndSessionReq" type="HTTPRequest" parent="."]
